--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
                             <span class="skill-tag">TypeScript</span>
                             <span class="skill-tag">NextJS</span>
                             <span class="skill-tag">Tailwind CSS</span>
-                            <span class="skill-tag">DynamoDB</span>
                             <span class="skill-tag">CDK</span>
                             <span class="skill-tag">SAM</span>
                             <span class="skill-tag">Linux (Ubuntu)</span>
@@ -152,7 +151,7 @@
                     <p class="text-sm text-gray-500 mt-1">2025年1月 〜 2025年7月</p>
                     <div class="mt-4">
                         <h4 class="font-semibold text-gray-700">概要</h4>
-                        <p class="text-gray-600 mt-1">イギリスからカザフスタンまで陸路で渡航。戦時中のイラン滞在経験あり</p>
+                        <p class="text-gray-600 mt-1">イギリスからカザフスタンまで陸路で渡航。イラン滞在中に戦争がはじまり危険な場面も・・・</p>
                     </div>
                     <div class="mt-4">
                         <h4 class="font-semibold text-gray-700">技術スタック</h4>
@@ -176,6 +175,76 @@
                 <span class="skill-tag">GCP</span>
             </div>
         </section>
+
+        <section class="mb-10">
+            <h2 class="section-heading"><i class="fas fa-signature mr-2"></i>資格・認定</h2>
+
+            <div class="grid gap-4 sm:grid-cols-2">
+                <!-- 基本情報技術者 -->
+                <div class="flex items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg transition">
+                    <div class="flex-shrink-0 w-12 h-12 rounded-full bg-blue-100 flex items-center justify-center">
+                        <i class="fas fa-laptop-code text-blue-600 text-lg"></i>
+                    </div>
+                    <div class="ml-4">
+                        <p class="font-semibold text-gray-800">基本情報技術者</p>
+                    </div>
+                </div>
+
+                <!-- AWS SAA-P -->
+                <div class="flex items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg transition">
+                    <div class="flex-shrink-0 w-12 h-12 rounded-full bg-yellow-100 flex items-center justify-center">
+                        <i class="fab fa-aws text-yellow-500 text-lg"></i>
+                    </div>
+                    <div class="ml-4">
+                        <p class="font-semibold text-gray-800">AWS Certified Solutions Architect - Professional</p>
+                    </div>
+                </div>
+
+                <!-- Google Cloud Architect -->
+                <div class="flex items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg transition">
+                    <div class="flex-shrink-0 w-12 h-12 rounded-full bg-green-100 flex items-center justify-center">
+                        <i class="fab fa-google text-green-600 text-lg"></i>
+                    </div>
+                    <div class="ml-4">
+                        <p class="font-semibold text-gray-800">Google Cloud Certified Professional Cloud Architect
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Azure Administrator -->
+                <div class="flex items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg transition">
+                    <div class="flex-shrink-0 w-12 h-12 rounded-full bg-cyan-100 flex items-center justify-center">
+                        <i class="fab fa-microsoft text-cyan-600 text-lg"></i>
+                    </div>
+                    <div class="ml-4">
+                        <p class="font-semibold text-gray-800">Microsoft Certified: Azure Administrator Associate
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Azure Solutions Architect Expert -->
+                <div class="flex items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg transition">
+                    <div class="flex-shrink-0 w-12 h-12 rounded-full bg-indigo-100 flex items-center justify-center">
+                        <i class="fab fa-microsoft text-indigo-600 text-lg"></i>
+                    </div>
+                    <div class="ml-4">
+                        <p class="font-semibold text-gray-800">Microsoft Certified: Azure Solutions Architect Expert
+                        </p>
+                    </div>
+                </div>
+
+                <!-- AWS DevOps Engineer -->
+                <div class="flex items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg transition">
+                    <div class="flex-shrink-0 w-12 h-12 rounded-full bg-orange-100 flex items-center justify-center">
+                        <i class="fab fa-aws text-orange-500 text-lg"></i>
+                    </div>
+                    <div class="ml-4">
+                        <p class="font-semibold text-gray-800">AWS Certified DevOps Engineer - Professional</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
         <section class="mb-10">
             <h2 class="section-heading"><i class="fas fa-star mr-2"></i>活かせる経験・知識</h2>
